Proyectos/Proyecto2/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-p2so1-grcp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
  namespace: so1-p2
spec:
  rules:
  - host: 35.237.246.60.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grcp-service
            port:
              number: 4000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-p2so1-python
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
  namespace: so1-p2
spec:
  rules:
  - host: 35.237.246.60.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: py-service
            port:
              number: 4000
